fixup! JAMES-3516 Implement non naive Thread/get method